ref: farmer page create and update operations refactor

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,7 +3,7 @@
   <app-nav class="nav-container" (isNav)="setIsNav($event)"></app-nav>
   <div class="redirect-container" *ngIf="currentPage === ''">
     <button class="button submit login-redirect" routerLink="farmer">
-      Sign in
+      Farmer in
     </button>
   </div>
   <app-greeting
