--- a/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.scss
+++ b/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.scss
@@ -1,7 +1,7 @@
 @import "src/variables";
 
 .product {
-  
+
   &-name {
     text-align: left;
   }
@@ -86,4 +86,8 @@
   &::after {
     background-image: url(../../../../../assets/images/icons/trash.svg);
   }
+}
+
+.form-group {
+  width: 100%;
 }
