--- a/src/app/core/header/nav/nav.component.scss
+++ b/src/app/core/header/nav/nav.component.scss
@@ -26,7 +26,7 @@ h2 {
   width: 70%;
   height: 100vh;
   background-color: $limeGreenTransparent;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   display: none;
