--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -8,7 +8,7 @@
         Looking for the best local food in the region? Try our FarmsFoods
         application to find the best fresh and organic products near you. Browse farms. Search for food. Locate and reserve.
         Subscribe to be updated on new offers. 
-        <span><a href="#" routerLink="/farmer/:id" class="redirect-link">Join as a Farmer</a> to be able to find new customers over the Globe or <a href="#" routerLink="/auth" class="redirect-link">Sign up/in</a> and enjoy all the great features for registered users</span>
+        <span><a href="#" routerLink="/auth/register" class="redirect-link">Join as a Farmer</a> to be able to find new customers over the Globe or <a href="#" routerLink="/auth" class="redirect-link">Sign up/in</a> and enjoy all the great features for registered users</span>
       </p>
     </div>
   </section>
