--- a/src/app/features/farm/farm.component.scss
+++ b/src/app/features/farm/farm.component.scss
@@ -2,8 +2,17 @@
   padding: 0 1em;
 }
 .farm-page-image{
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+
    img{
     width: 100%;
+    height: fit-content;
+    object-fit: fill;
    }
 }
 .farm-page-products{
