--- a/src/app/core/header/nav/nav.component.scss
+++ b/src/app/core/header/nav/nav.component.scss
@@ -77,11 +77,10 @@ h2 {
     height: auto;
     background-color: $limeGreen;
     position: static;
-    // top: 0;
-    // left: 0;
     flex-direction: row;
     gap: 2em;
     z-index: 10;
+    overflow: visible;
 
     .nav-goup {
       position: relative;
