--- a/src/app/shared/components/grid/grid-item/grid-item.component.html
+++ b/src/app/shared/components/grid/grid-item/grid-item.component.html
@@ -1,7 +1,7 @@
 <div class="item">
   <div class="item-image">
     <img *ngIf="item.imagePath"
-      [src]="'https://localgoodsback.azurewebsites.net/Images/Products/'+ item.imagePath"
+      [src]="'https://localgoodsback.azurewebsites.net/Images/'+ (item.farmId ? 'Products/': 'Farms/') + item.imagePath"
       alt="product image"
       class="object-fit_cover">
     <ng-template #noImage>No image yet ...</ng-template>
