feat: add contacts to farm page

--- a/src/app/features/farm/farm.component.html
+++ b/src/app/features/farm/farm.component.html
@@ -3,8 +3,14 @@
     <img [src]="farm.imagePath ? 'https://localgoodsback.azurewebsites.net/Images/Farms/' + farm.imagePath : '../../../../assets/images/no-image.webp'" [alt]="'farm ' + (farm.name | lowercase) + ' image'">
   </div>
   <div class="farm-page-description">
-    <h1>{{ farm.name }}</h1>
+    <h1>{{ farm.name | titlecase}}</h1>
     <p>{{ farm.description }}</p>
+  </div>
+  <div class="farm-contacts">
+    <div class="facebook"><a [href]="farm.faceBook" class="fb item-social-icon">facebook</a></div>
+    <div class="instagram"><a [href]="farm.instagram" class="insta item-social-icon">instagram</a></div>
+    <div class="mail"><a [href]="'mailto:'+farm.email">{{farm.email}}</a></div>
+    <div class="address"><a [href]="'https://www.google.com/maps/dir/?api=1&query'+ farm.latitude + '-' + farm.longitude">{{farm.country}}, {{farm.city}}, {{farm.address}}</a></div>
   </div>
   <div class="farm-page-products">
     <app-grid [items]="farm.products"></app-grid>
