--- a/src/app/features/farm/farm.component.scss
+++ b/src/app/features/farm/farm.component.scss
@@ -1,7 +1,9 @@
-.farm-page-description{
+@import "src/variables";
+
+.farm-page-description {
   padding: 0 1em;
 }
-.farm-page-image{
+.farm-page-image {
   width: 100%;
   height: 300px;
   overflow: hidden;
@@ -9,12 +11,108 @@
   align-items: center;
   display: flex;
 
-   img{
+  img {
     width: 100%;
     height: fit-content;
     object-fit: fill;
-   }
+  }
 }
-.farm-page-products{
+.farm-page-products {
   padding: 0 1em;
+}
+.farm-contacts {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas:
+    "mail mail"
+    "address address"
+    "insta fb";
+  gap: 1em;
+  justify-content: center;
+  align-items: center;
+
+  a {
+    color: $primaryGreen;
+
+    &.item-social-icon {
+      display: block;
+      width: 30px;
+      height: 30px;
+      overflow: hidden;
+      border-radius: 3px;
+      text-indent: -9999px;
+      position: relative;
+      transform: all 0.3s;
+
+      &:hover {
+        transform: scale(1.2);
+      }
+
+      &::after {
+        content: " ";
+        background-position: center;
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
+
+      &.fb {
+        &::after {
+          background-image: url("../../../assets/images/icons/social/facebook.png");
+        }
+      }
+      &.insta {
+        &::after {
+          background-image: url("../../../assets/images/icons/social/instagram.png");
+        }
+      }
+    }
+  }
+
+  .facebook {
+    grid-area: fb;
+  }
+  .instagram {
+    grid-area: insta;
+    justify-self: end;
+  }
+  .mail {
+    grid-area: mail;
+    display: flex;
+    justify-content: center;
+  }
+  .address {
+    grid-area: address;
+    justify-content: center;
+
+    a {
+      position: relative;
+      padding-left: 30px;
+      display: block;
+
+      &:hover {
+        color: $darkGreen;
+      }
+
+      &::before {
+        content: "";
+        background-image: url("../../../assets/images/icons/map-pin.svg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 25px;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 0;
+        height: 25px;
+        filter: invert(64%) sepia(77%) saturate(367%) hue-rotate(43deg)
+          brightness(96%) contrast(87%);
+      }
+    }
+  }
 }
