--- a/src/app/features/farm/farm.component.html
+++ b/src/app/features/farm/farm.component.html
@@ -3,7 +3,7 @@
     <img [src]="farm.imagePath ? 'https://localgoodsback.azurewebsites.net/Images/Farms/' + farm.imagePath : '../../../../assets/images/no-image.webp'" [alt]="'farm ' + (farm.name | lowercase) + ' image'">
   </div>
   <div class="farm-page-description">
-    <h1>{{ farm.name | titlecase}}</h1>
+    <h1>{{ farm.name }}</h1>
     <p>{{ farm.description }}</p>
   </div>
   <div class="farm-contacts">
@@ -13,7 +13,9 @@
     <div class="address"><a [href]="'https://www.google.com/maps/dir/?api=1&query'+ farm.latitude + '-' + farm.longitude">{{farm.country}}, {{farm.city}}, {{farm.address}}</a></div>
   </div>
   <div class="farm-page-products">
-    <app-grid [items]="farm.products"></app-grid>
+    <ng-container *ngIf="farmProducts$ | async as farmProducts">
+      <app-grid [items]="farmProducts"></app-grid>
+    </ng-container>
   </div>
 </div>
 
