feat: add error component and fix bugs

--- a/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.scss
+++ b/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.scss
@@ -4,10 +4,13 @@
 
   &-name {
     text-align: left;
+    margin: 0;
   }
 
   &-content {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     gap: 1em;
   }
 
