--- a/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.html
+++ b/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.html
@@ -1,8 +1,8 @@
 <div class="product">
   <div class="product-content">
-    <div class="product-image">
-      <img *ngIf="product.imagePath; else noImage"
-      src=""
+    <div class="product-image" >
+      <img 
+      [src]="'https://localgoodsback.azurewebsites.net/Images/Products/' + product.imagePath"
       alt="product image"
       class="object-fit_cover">
     <ng-template #noImage>No image yet ...</ng-template>
