--- a/src/app/features/home/slide/slide.component.html
+++ b/src/app/features/home/slide/slide.component.html
@@ -7,7 +7,7 @@
     </picture>
     <div class="hero-text">
       <h1 class="hero-heading">All fresh and tasty!</h1>
-      <button class="hero-button" routerLink="/products">click to start</button>
+      <button class="hero-button" routerLink="/products">Click to start</button>
     </div>
   </div>
 </div>
