--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <div class="wrapper">
+  <app-header></app-header>
 
-  <app-header class="page-header"></app-header>
-  <div class="grow-container">
-    <router-outlet class="page-body"></router-outlet>
+  <div class="content">
+    <router-outlet></router-outlet>
   </div>
-  
-  <app-footer class="page-footer"></app-footer>
 
+  <app-footer></app-footer>
 </div>
