--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,9 +4,7 @@
   display: flex;
   flex-direction: column;
 
-  .page-header,
-  .page-footer {
-    flex-grow: 0;
-    flex-shrink: 0;
+  .content {
+    flex: 1 1 auto;
   }
 }
