--- a/src/app/features/home/map/map.component.html
+++ b/src/app/features/home/map/map.component.html
@@ -1,40 +1,36 @@
 <h2>Where you can find?</h2>
-<agm-map 
 
-[latitude]="lat" 
-[longitude]="lng" 
+<agm-map
+[latitude]="lat"
+[longitude]="lng"
 [zoom]="zoom"
 [disableDefaultUI]="false"
 [zoomControl]="false"
 [scrollwheel]="false"
-[fitBounds]="true" 
+[fitBounds]="true"
 class="map-box">
 
   <agm-overlay
     *ngFor="let f of farms$ | async; let i = index"
     [latitude]="f.latitude"
-    [longitude]="f.longitude"
-    (markerClick)="clickedMarker(f.name, i)"
-  >
+    [longitude]="f.longitude">
     <div class="farm-details">
       <a [routerLink]="['farm', f.id]" [title]="f.name" class="farm-image">
         <img [src]="'https://localgoodsback.azurewebsites.net/Images/Farms/' + f.imagePath" alt="farm image">
       </a>
-      <a [routerLink]="['farm', f.id]" class="farm-name"> 
+      <a [routerLink]="['farm', f.id]" class="farm-name">
         <span>{{f.name}}</span>
       </a>
     </div>
   </agm-overlay>
 
-  <agm-marker 
-  *ngFor="let f of farms$ | async; let i = index" 
+  <agm-marker
+  *ngFor="let f of farms$ | async; let i = index"
   [agmFitBounds]="true"
-  [latitude]="f.latitude" 
-  [longitude]="f.longitude" 
-  [visible]="false"
-  >
-
-</agm-marker>
+  [latitude]="f.latitude"
+  [longitude]="f.longitude"
+  [visible]="false">
+  </agm-marker>
 </agm-map>
 
-<button class="view-all" routerLink="/farms">view all farms</button>
+<button class="view-all" routerLink="/farms">View all farms</button>
