--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -1,5 +1,7 @@
 <div class="all-products-container">
-  <app-search [searchBy]="'product'" (term)="searchValue = $event"></app-search>
+  <app-search searchBy="product" (term)="searchValue = $event"></app-search>
 
-  <app-grid [items]="((products$ | async) ?? []) | search: searchValue"></app-grid>
+  <app-grid itemsType="Products"
+            [items]="((products$ | async) ?? []) | search: searchValue">
+  </app-grid>
 </div>
