ref: refactoring related to user auth

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,22 +1,29 @@
 <div class="header-container" [ngClass]="currentPage === '' ? 'home' : currentPage === 'farmer' ? 'farm' : null">
   <app-logo class="logo-container" [ngClass]=" navOpen ? 'nav-open' : null "></app-logo>
-  <app-nav class="nav-container" (isNav)="setIsNav($event)" [user]="user"></app-nav>
+
+  <app-nav class="nav-container" (isNav)="setIsNav($event)" [user]="user$ | async"></app-nav>
+
   <div class="redirect-container" *ngIf="currentPage === ''">
-    <ng-container *ngIf="user && (user.roles.includes('Farmer'))">
-      <button  class="button submit login-redirect" routerLink="farmer">
+    <ng-container *ngIf="user$ | async as user">
+      <button *ngIf="user.roles.includes('Farmer')"
+              class="button submit login-redirect"
+              routerLink="farmer">
         My Farms
       </button>
     </ng-container>
-    <ng-container *ngIf="!(isUser$ | async)">
+
+    <ng-container *ngIf="!(user$ | async)">
       <button class="button submit login-redirect" routerLink="auth/login">
         Sign in
       </button>
     </ng-container>
   </div>
+
   <app-greeting
     class="welcome-user"
     *ngIf="currentPage === 'farmer'"
-    [user]="user"
-  ></app-greeting>
+    [user]="user$ | async">
+  </app-greeting>
 </div>
+
 <app-error></app-error>
