--- a/src/app/core/header/nav/nav.component.html
+++ b/src/app/core/header/nav/nav.component.html
@@ -3,40 +3,46 @@
   <span class="nav-burger-line"></span>
   <span class="nav-burger-line"></span>
 </button>
+
 <nav class="nav-header-menu" [ngStyle]="nav ? {'display':'flex'} : null " #navmenu>
   <app-logo [mode]="'nav'" (click)="toggleMenu($event)"></app-logo>
   <h2 class="nav-header-greeting">Welcome, {{ user ? user.userName : 'guest'}}!</h2>
+
   <div class="nav-goup">
     <h3 class="nav-parent">Products</h3>
     <ul class="nav-list" >
       <li><a (click)="visitAllProducts($event)" >All products</a></li>
       <li *ngFor=" let category of categories$ | async">
-        <a [routerLink]="['/products']" [queryParams]="{'categories': category.name}" (click)="toggleMenu($event)">{{category.name}}</a>
+        <a [routerLink]="['/products']" [queryParams]="{'categories': category.name}"
+           (click)="toggleMenu($event)">{{ category.name }}
+        </a>
       </li>
     </ul>
   </div>
+
   <div class="nav-goup">
     <h3 class="nav-parent">Farms</h3>
     <ul class="nav-list" >
       <li><a (click)="visitAllFarms($event)" >All farms</a></li>
       <li *ngFor=" let farm of farms$ | async">
-        <a [routerLink]="['/farm', farm.id]" (click)="toggleMenu($event)">{{farm.name}}</a>
+        <a [routerLink]="['/farm', farm.id]" (click)="toggleMenu($event)">{{ farm.name }}</a>
       </li>
     </ul>
   </div>
+
   <div class="nav-goup">
     <h3 class="nav-parent">Account</h3>
 
     <ul class="nav-list">
-      <ng-container *ngIf="isUser$ | async">
+      <ng-container *ngIf="user">
         <li><a (click)=viewAccount()>Personal Info</a></li>
         <li *ngIf="user && user.roles.includes('Farmer')"><a (click)=viewFarms($event)>My Farms</a></li>
         <li><a (click)=signOut()>Sign out</a></li>
       </ng-container>
 
-      <ng-container *ngIf="!(isUser$ | async)">
-        <li><a  routerLink="auth/login" (click)="toggleMenu($event)">Sign in</a></li>
-        <li><a  routerLink="auth/register" >Sign up</a></li>
+      <ng-container *ngIf="!user">
+        <li><a routerLink="auth/login" (click)="toggleMenu($event)">Sign in</a></li>
+        <li><a routerLink="auth/register">Sign up</a></li>
       </ng-container>
     </ul>
 
