--- a/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.html
+++ b/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.html
@@ -1,7 +1,7 @@
 <div class="product">
   <div class="product-content">
     <div class="product-image" >
-      <img 
+      <img
       [src]="'https://localgoodsback.azurewebsites.net/Images/Products/' + product.imagePath"
       alt="product image"
       class="object-fit_cover">
@@ -77,7 +77,7 @@
       </div>
 
       <div class="modal-buttons">
-        <button type="submit" [disabled]="!editProductForm.form.valid">Create product</button>
+        <button type="submit" [disabled]="!editProductForm.form.valid">Update product</button>
         <button type="button" (click)="isModalEditOpened = false">Cancel</button>
       </div>
     </form>
