styles: edit styles on core pages stage1

--- a/src/app/shared/components/grid/filters/filters.component.scss
+++ b/src/app/shared/components/grid/filters/filters.component.scss
@@ -4,7 +4,7 @@
   padding: 2em;
   width: 70%;
   height: 100vh;
-  background-color: $darkGreen;
+  background-color: $darkGreenTransparent;
   position: fixed;
   top: 0;
   left: 0;
