--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -6,14 +6,12 @@
   <section class="app-description">
     <div class="app-description-text">
       <p>
-        Looking for the best local food in the region? Try our FarmsFoods application to find the best
-        fresh and organic products near you. Browse farms. Search for food. Locate and reserve.
-        Subscribe to be updated on new offers.
+        Looking for the best local food in the region? Try out Farmers Goods to find the best fresh and organic products near you. Browse farms, search for organic food and purchase it from the nearest farmer.
         <span>
           <a href="#" routerLink="/auth/register" class="redirect-link">Join as a Farmer</a>
-          to be able to find new customers over the Globe or
+          to be able to find new customers over the Globe or 
           <a href="#" routerLink="/auth/login" class="redirect-link">Sign in/up</a>
-          and enjoy all the great features for registered users
+          and enjoy all the great features which are available for registered users.
         </span>
       </p>
     </div>
