--- a/src/app/shared/components/grid/grid-item/grid-item.component.html
+++ b/src/app/shared/components/grid/grid-item/grid-item.component.html
@@ -15,15 +15,22 @@
     <div class="item-price" *ngIf="item.price">
       {{ item.price | currency: 'EUR' }}
     </div>
-    <div class="item-farm-name" *ngIf="item.farmId">
-      <a [routerLink]="'/farm/'+ item.farmId">{{ item.name }}</a>
+    <div class="farm-info" *ngIf="item.farmId">
+      <div class="item-farm-name">
+        <a [routerLink]="'/farm/'+ item.farmId" *ngIf="farm$ | async as farm">{{ farm.name }}</a>
+      </div>
+      <div class="item-location" >
+        <a  *ngIf="farm$ | async as farm" [href]="'https://www.google.com/maps/dir/?api=1&query'+ farm.latitude + '-' + farm.longitude" >{{ farm.country + ', ' + farm.city + ', ' + farm.address }}</a>
+      </div>
+      <div class="item-phone">
+        <a  *ngIf="farm$ | async as farm" [href]="'tel:'+ farm.telephone" >+{{ farm.telephone }}</a>
+      </div>
+      <div class="item-social" *ngIf="farm$ | async as farm">
+        <a class="item-social-icon fb" [href]="farm.faceBook">Facebook</a>
+        <a class="item-social-icon insta" [href]="farm.instagram">Instagram</a>
+      </div>
     </div>
-    <div class="item-location" *ngIf="item.address">
-      {{ item.country + ', ' + item.city + ', ' + item.address }}
-    </div>
-    <div class="item-social">
-      <a class="item-social-icon fb" [routerLink]="item.faceBook">Facebook</a>
-      <a class="item-social-icon insta" [routerLink]="item.instagram">Instagram</a>
-    </div>
+
+
   </div>
 </div>
