--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,4 +1,6 @@
 $primaryGreen: #8CC63F;
 $darkGreen: #527F0B;
 $limeGreen: #D0DB15;
+
 $limeGreenTransparent: #d1db15e8;
+$darkGreenTransparent: #537f0be3;
