--- a/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.scss
+++ b/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.scss
@@ -75,6 +75,17 @@
   }
 }
 
+.form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+
+  .form-note-text {
+    font-size: 0.7em;
+  }
+}
+
 .edit-btn {
   background-color: $primaryGreen;
 
