--- a/src/app/features/farmer/farmer-products/farmer-products.component.html
+++ b/src/app/features/farmer/farmer-products/farmer-products.component.html
@@ -65,7 +65,7 @@
       </div>
 
       <div class="modal-buttons">
-        <button type="submit" [disabled]="!addProductForm.form.valid">Create product</button>
+        <button type="submit" [disabled]="!addProductForm.form.valid">Create</button>
         <button type="button" (click)="isModalAddOpened = false">Cancel</button>
       </div>
     </form>
