--- a/src/app/features/farmer/farmer-farms/farmer-farms.component.html
+++ b/src/app/features/farmer/farmer-farms/farmer-farms.component.html
@@ -114,7 +114,7 @@
       </div>
 
       <div class="modal-buttons">
-        <button type="submit" [disabled]="!addFarmForm.form.valid" >Add new farm</button>
+        <button type="submit" [disabled]="!addFarmForm.form.valid">Create</button>
         <button type="button" (click)="isModalAddOpened = false">Cancel</button>
       </div>
     </form>
