--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,7 +85,7 @@ button {
 
   &-form {
     display: flex;
-    width: 100%;
+    width: 90%;
     flex-direction: column;
     gap: 10px;
 
@@ -111,8 +111,8 @@ button {
 
   &-buttons {
     display: flex;
-    justify-content: center;
-    gap: 50px;
+    justify-content: space-evenly;
+    width: 100%;
   }
 }
 .grow-container {
